--- a/decidim-conferences/app/cells/decidim/conferences/conference_dropdown_metadata/metadata.erb
+++ b/decidim-conferences/app/cells/decidim/conferences/conference_dropdown_metadata/metadata.erb
@@ -1,7 +1,7 @@
-<h4 class="h4"><%= title %></h4>
-<div class="my-8 flex items-center text-sm space-x-6">
+<h4 class="menu-bar__secondary-dropdown__title"><%= title %></h4>
+<div class="menu-bar__secondary-dropdown__metadata">
   <% if hashtag.present? %>
-    <span class="flex items-center space-x-2">
+    <span>
       <%= icon "twitter-line", class: "text-gray fill-current" %>
       <%= link_to "##{hashtag}", twitter_hashtag_url(hashtag), target: "_blank", class: "text-secondary underline" %>
     </span>
