--- a/decidim-core/app/cells/decidim/participatory_space_dropdown_metadata/metadata.erb
+++ b/decidim-core/app/cells/decidim/participatory_space_dropdown_metadata/metadata.erb
@@ -1,3 +1,2 @@
-<h4 class="h4"><%= title %></h4>
-<div class="my-8 flex items-center text-sm space-x-6">
-</div>
+<h4 class="menu-bar__secondary-dropdown__title"><%= title %></h4>
+<div class="menu-bar__secondary-dropdown__metadata"></div>
