--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -48,7 +48,7 @@ header{
     }
 
     &__breadcrumb-mobile{
-      @apply block lg:hidden w-full;
+      @apply block lg:hidden w-full z-10;
     }
 
     &__actions{
@@ -89,6 +89,34 @@ header{
           &:nth-last-child(-n+2){
             @apply border-0;
           }
+        }
+      }
+    }
+
+    &__secondary-dropdown{
+      @apply absolute top-full left-0 lg:relative flex justify-between bg-white rounded-b shadow-lg text-black w-full lg:w-[1000px];
+
+      &__left{
+        @apply hidden md:block w-3/4 p-8 space-y-8;
+      }
+
+      &__title{
+        @apply h4 md:h3;
+      }
+
+      &__menu{
+        @apply w-full md:w-1/4 bg-primary px-8 py-3 divide-y divide-gray-3 text-white;
+
+        > *{
+          @apply py-3 md:py-3.5;
+        }
+      }
+
+      &__metadata{
+        @apply flex items-center text-sm space-x-6;
+
+        > span{
+          @apply flex items-center space-x-2;
         }
       }
     }
