--- a/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_dropdown_metadata/metadata.erb
+++ b/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_dropdown_metadata/metadata.erb
@@ -1,9 +1,9 @@
-<h4 class="h4"><%= title %></h4>
-<%= link_to decidim_participatory_processes.description_participatory_process_path(process), class: "mt-4 button button__text-secondary" do %>
+<h4 class="menu-bar__secondary-dropdown__title"><%= title %></h4>
+<%= link_to decidim_participatory_processes.description_participatory_process_path(process), class: "button button__text-secondary" do %>
   <span><%= t("more_info", scope: "layouts.decidim.participatory_processes.participatory_process") %></span><%= icon "arrow-right-line" %>
 <% end %>
-<div class="my-8 flex items-center text-sm space-x-6">
-  <span class="flex items-center space-x-2">
+<div class="menu-bar__secondary-dropdown__metadata">
+  <span>
     <%= icon "direction-line", class: "text-gray fill-current" %>
 
     <span class="font-semibold"><%= t("layouts.decidim.participatory_processes.participatory_process.active_step") %></span>
@@ -15,7 +15,7 @@
   </span>
 
   <% if hashtag.present? %>
-    <span class="flex items-center space-x-2">
+    <span>
       <%= icon "twitter-line", class: "text-gray fill-current" %>
       <%= link_to "##{hashtag}", twitter_hashtag_url(hashtag), target: "_blank", class: "text-secondary underline" %>
     </span>
