Display component name in meetings aside partial when the index refers to a component

--- a/decidim-meetings/app/views/decidim/meetings/directory/meetings/index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/directory/meetings/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: "decidim/meetings/shared/index", locals: {
   display_map: true,
   display_announcement: false,
+  component: nil,
   search_variable: :title_or_description_cont,
   filter_options: {
     date: !@forced_past_meetings,
