--- a/decidim-meetings/app/views/decidim/meetings/meetings/index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: "decidim/meetings/shared/index", locals: {
   display_map: current_component.settings.maps_enabled? && search.result.not_online.exists?,
   display_announcement: true,
+  component: current_component,
   search_variable: :search_text_cont,
   filter_options: {
     date: !@forced_past_meetings,
