--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
@@ -10,7 +10,7 @@
 
 <%= turbo_frame_tag "main_frame" do %>
   <% content_for :aside do %>
-    <%= render partial: "decidim/meetings/shared/meetings_aside", locals: { main_action: true, search_variable:, filter_options: } %>
+    <%= render partial: "decidim/meetings/shared/meetings_aside", locals: { main_action: true, search_variable:, filter_options:, component: } %>
   <% end %>
 
   <%= render layout: "layouts/decidim/shared/layout_two_col" do %>
