add button for withdrawn meetings

--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
@@ -25,7 +25,7 @@
     <% end %>
 
     <div id="meetings">
-      <%= render partial: "decidim/meetings/shared/meetings" %>
+      <%= render partial: "decidim/meetings/shared/meetings", locals: { component: } %>
     </div>
   <% end %>
 <% end %>
