--- a/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
+++ b/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
@@ -13,7 +13,7 @@
     <% end %>
     <%= turbo_frame_tag "drawer_content_frame", data: { drawer_content: "" } do %>
       <div><%= yield %></div>
-      <div><%= yield :drawer_aside %></div>
+      <aside><%= yield :drawer_aside %></aside>
     <% end %>
   </div>
 </div>
