--- a/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
@@ -20,7 +20,7 @@
       placeholder: t("decidim.meetings.meetings.filters.search"),
       title: t("decidim.meetings.meetings.filters.search"),
       "aria-label": t("decidim.meetings.meetings.filters.search") %>
-    <button type="submit" aria-controls="meetings" aria_label="<%= t("decidim.meetings.meetings.filters.search") %>">
+    <button type="submit" aria-controls="meetings" aria-label="<%= t("decidim.meetings.meetings.filters.search") %>">
       <%= icon "search-line" %>
     </button>
   </div>
