--- a/decidim-accountability/app/cells/decidim/accountability/project/show.erb
+++ b/decidim-accountability/app/cells/decidim/accountability/project/show.erb
@@ -8,7 +8,11 @@
     <ul class="tab-x-container">
       <% tabs.each_with_index do |tab, i| %>
         <% next unless panel_contents.has_key?(tab[:id]) %>
-        <li class="tab-x" data-controls="panel-<%= tab[:id] %>" data-open="<%= "true" if i == 0 %>"><%= icon tab[:icon], class: "text-gray fill-current" %><%= tab[:text] %></li>
+        <li>
+          <button class="tab-x" data-controls="panel-<%= tab[:id] %>" data-open="<%= "true" if i == 0 %>">
+            <%= icon tab[:icon], class: "text-gray fill-current" %><%= tab[:text] %>
+          </button>
+        </li>
       <% end %>
     </ul>
 
