--- a/decidim-core/app/views/decidim/shared/filters/_redesigned_collection.html.erb
+++ b/decidim-core/app/views/decidim/shared/filters/_redesigned_collection.html.erb
@@ -1,5 +1,5 @@
 <div class="filter-container">
-    <button data-controls="panel-dropdown-menu-<%= id %>" data-open="true">
+    <button id="trigger-menu-<%= id %>" data-controls="panel-dropdown-menu-<%= id %>" data-open="true">
         <%= icon "arrow-down-s-line" %>
         <%= icon "arrow-up-s-line" %>
         <span><%= t(id, scope: label_scope) %></span>
