--- a/decidim-meetings/app/cells/decidim/meetings/redesigned_meeting/show.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/redesigned_meeting/show.erb
@@ -1,7 +1,11 @@
 <div class="mt-8" data-component="accordion" data-multiselectable="false" data-collapsible="false">
   <ul class="tab-x-container">
     <% tabs.each_with_index do |tab, i| %>
-      <li class="tab-x" data-controls="panel-<%= tab[:id] %>" data-open="<%= "true" if i == 0 %>"><%= icon tab[:icon], class: "text-gray fill-current" %><%= tab[:text] %></li>
+      <li>
+        <button id="trigger-<%= tab[:id] %>" class="tab-x" data-controls="panel-<%= tab[:id] %>" data-open="<%= "true" if i == 0 %>">
+          <%= icon tab[:icon], class: "text-gray fill-current" %><%= tab[:text] %>
+        </button>
+      </li>
     <% end %>
   </ul>
 
