Use diferent id for repeated element of breadcrumb

--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_desktop.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_desktop.html.erb
@@ -4,7 +4,7 @@
   <%= icon "home-2-line" %>
 </div>
 <div id="main-dropdown-panel" class="menu-bar__breadcrumb-desktop__dropdown-content" aria-hidden="true">
-  <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown" %>
+  <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown", locals: { id: "breadcrumb-main-dropdown-desktop" } %>
 </div>
 
 <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_items" %>
