--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
@@ -1,4 +1,4 @@
-<div id="breadcrumb-main-dropdown" class="menu-bar__main-dropdown">
+<div id="<%= id %>" class="menu-bar__main-dropdown">
   <div class="menu-bar__main-dropdown__top">
     <div class="menu-bar__main-dropdown__top-left">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown_top_left" %>
