--- a/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_dropdown_metadata/metadata.erb
+++ b/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_dropdown_metadata/metadata.erb
@@ -1,5 +1,5 @@
 <h4 class="menu-bar__secondary-dropdown__title"><%= title %></h4>
-<%= link_to decidim_participatory_processes.description_participatory_process_path(process), class: "button button__text-secondary" do %>
+<%= link_to decidim_participatory_processes.description_participatory_process_path(process), class: "mt-4 button button__text-secondary" do %>
   <span><%= t("more_info", scope: "layouts.decidim.participatory_processes.participatory_process") %></span><%= icon "arrow-right-line" %>
 <% end %>
 <div class="menu-bar__secondary-dropdown__metadata">
