--- a/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
@@ -2,7 +2,7 @@
   <%= cell(
         "decidim/activities",
         valid_activities,
-        layout: :menu_breadcrumb,
+        id_prefix: "menu-breadcrumb",
         author_options: { layout: :avatar }
       ) %>
 </div>
