--- a/decidim-core/app/cells/decidim/activity/show.erb
+++ b/decidim-core/app/cells/decidim/activity/show.erb
@@ -1,4 +1,4 @@
-<div class="activity" id="<%= element_id %>" data-activity>
+<div id="<%= element_id %>" class="activity" data-activity>
   <div class="activity__time">
     <%= created_at %>
   </div>
@@ -14,4 +14,9 @@
       <%= participatory_space_link %>
     </span>
   </div>
+  <% if show_author? %>
+    <div class="activity__author">
+      <%= author %>
+    </div>
+  <% end %>
 </div>
