--- a/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
@@ -1,4 +1,4 @@
-<div class="bg-background rounded p-4 space-y-3">
+<div class="bg-background rounded p-4 space-y-3 text-sm">
   <%= cell(
         "decidim/activities",
         valid_activities,
