--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_activity.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_activity.scss
@@ -2,7 +2,7 @@
   @apply flex flex-col-reverse md:flex-row gap-2 md:gap-12 py-4 first:pt-0 last:pb-0;
 
   &__time{
-    @apply w-full md:w-1/6 flex-none text-gray-2 text-sm md:text-md;
+    @apply w-full md:w-1/6 flex-none text-gray-2;
   }
 
   &__content{
