fix tests meetings

--- a/decidim-meetings/app/views/decidim/meetings/directory/meetings/index.js.erb
+++ b/decidim-meetings/app/views/decidim/meetings/directory/meetings/index.js.erb
@@ -1,1 +1,1 @@
-<%= render partial: "decidim/meetings/shared/index.js" %>
+<%= render partial: "decidim/meetings/shared/index.js", locals: { component: nil } %>
