--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.js.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.js.erb
@@ -1,5 +1,5 @@
 var $meetings = $('#meetings');
-$meetings.html('<%= j(render partial: "decidim/meetings/shared/meetings").strip.html_safe %>');
+$meetings.html('<%= j(render partial: "decidim/meetings/shared/meetings", locals: { component: }).strip.html_safe %>');
 
 var $urlCalendarUrl = $('#urlCalendarUrl');
 $urlCalendarUrl.val("<%= short_url(route_name: "calendar", params: { filter: params.fetch(:filter, {}).try(:to_unsafe_hash) }) %>");
