--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_desktop.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_desktop.html.erb
@@ -23,8 +23,8 @@
     <% end %>
   </div>
 <% else %>
-  <details class="main-bar__dropdown-container">
-    <summary id="dropdown-summary-account" class="main-bar__dropdown-trigger" aria-controls="dropdown-account">
+  <div class="main-bar__dropdown-container" data-component="accordion">
+    <div id="trigger-dropdown-account" class="main-bar__dropdown-trigger" data-controls="panel-dropdown-account">
       <% if current_user.notifications.any? || current_user.unread_conversations.any? %>
         <span class="main-bar__dropdown-trigger__notification" data-unread-items></span>
       <% end %>
@@ -43,9 +43,9 @@
           <span><%= t("layouts.decidim.user_profile.account") %></span>
         </span>
       <% end %>
-    </summary>
-    <ul id="dropdown-account" class="dropdown dropdown__bottom main-bar__dropdown" aria-labelledby="dropdown-summary-account">
+    </div>
+    <ul id="panel-dropdown-account" class="dropdown dropdown__bottom main-bar__dropdown" aria-hidden="true">
       <%= render partial: "layouts/decidim/header/redesigned_main_links_dropdown" %>
     </ul>
-  </details>
+  </div>
 <% end %>
