Use an option to hide participatory space on activities of secondary dropdown

--- a/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/menu_breadcrumb_last_activity/show.erb
@@ -2,7 +2,7 @@
   <%= cell(
         "decidim/activities",
         valid_activities,
-        id_prefix: "menu-breadcrumb"
+        **activities_options
       ) %>
 </div>
 <%= link_to last_activities_path, class: "mt-2.5 button button__text-secondary" do %>
