--- a/decidim-core/app/cells/decidim/activity/show.erb
+++ b/decidim-core/app/cells/decidim/activity/show.erb
@@ -9,9 +9,11 @@
         <%= html_truncate decidim_sanitize(resource_link_text, strip_tags: true), length: 80 %>
       </a>
     </span>
-    <span>
-      <%= icon "treasure-map-line", class: "w-3.5 h-3.5 text-gray fill-current" %>
-      <%= participatory_space_link %>
-    </span>
+    <% if show_participatory_space? %>
+      <span>
+        <%= icon "treasure-map-line" %>
+        <%= participatory_space_link %>
+      </span>
+    <% end %>
   </div>
 </div>
