--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_items.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_items.html.erb
@@ -13,7 +13,7 @@
       </div>
     </div>
   <% else %>
-    <%= link_to_if(item[:url].present?, item_label, item[:url], class:"menu-bar__breadcrumb-desktop__dropdown-trigger#{' font-bold' if item[:active]}") do %>
+    <%= link_to_if(item[:url].present? && !is_active_link?(item[:url], :exclusive), item_label, item[:url], class:"menu-bar__breadcrumb-desktop__dropdown-trigger#{' font-bold' if item[:active]}") do %>
       <%# alternative template %>
       <%= content_tag :span, item_label, class:"menu-bar__breadcrumb-desktop__dropdown-trigger#{' font-bold' if item[:active]}", tabindex: "0" %>
     <% end %>
