--- a/decidim-core/app/cells/decidim/activity/show.erb
+++ b/decidim-core/app/cells/decidim/activity/show.erb
@@ -9,10 +9,12 @@
         <%= html_truncate decidim_sanitize(resource_link_text, strip_tags: true), length: 80 %>
       </a>
     </span>
-    <span>
-      <%= icon "treasure-map-line" %>
-      <%= participatory_space_link %>
-    </span>
+    <% unless hide_participatory_space? %>
+      <span>
+        <%= icon "treasure-map-line" %>
+        <%= participatory_space_link %>
+      </span>
+    <% end %>
   </div>
   <% if show_author? %>
     <div class="activity__author">
