--- a/decidim-core/app/cells/decidim/participatory_space_dropdown_metadata/show.erb
+++ b/decidim-core/app/cells/decidim/participatory_space_dropdown_metadata/show.erb
@@ -2,7 +2,7 @@
   <div class="menu-bar__secondary-dropdown__left">
     <%= render :metadata %>
     <%# REDESIGN_PENDING: Show last activity related whit participatory space only %>
-    <%= cell "decidim/content_blocks/menu_breadcrumb_last_activity", model %>
+    <%= cell "decidim/content_blocks/menu_breadcrumb_last_activity", model, hide_participatory_space: true %>
   </div>
   <ul class="menu-bar__secondary-dropdown__menu">
     <%= render :links %>
