--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_main_dropdown.html.erb
@@ -11,7 +11,7 @@
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown_bottom_left" %>
     </div>
     <div class="menu-bar__main-dropdown__bottom-right">
-      <%= cell "decidim/content_blocks/menu_breadcrumb_last_activity", nil, show_participatory_space: true %>
+      <%= cell "decidim/content_blocks/menu_breadcrumb_last_activity", nil %>
     </div>
   </div>
 </div>
