--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu.html.erb
@@ -2,7 +2,7 @@
   <div class="menu-bar">
 
     <%# secondary dropdown only desktop %>
-    <div class="menu-bar__breadcrumb-desktop" data-component="accordion" data-multiselectable="false">
+    <div class="menu-bar__breadcrumb-desktop">
       <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_desktop" %>
     </div>
     <div class="menu-bar__actions">
