--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_desktop.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_desktop.html.erb
@@ -1,10 +1,11 @@
 <div id="main-dropdown-summary"
   class="menu-bar__breadcrumb-desktop__dropdown-trigger"
-  data-controls="main-dropdown-panel">
+  data-component="dropdown"
+  data-target="main-dropdown-menu">
   <span class="sr-only"><%= t("decidim.menu.home") %></span>
   <%= icon "home-2-line" %>
 </div>
-<div id="main-dropdown-panel" class="menu-bar__breadcrumb-desktop__dropdown-content" aria-hidden="true">
+<div id="main-dropdown-menu" class="menu-bar__breadcrumb-desktop__dropdown-content" aria-hidden="true">
   <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown", locals: { id: "breadcrumb-main-dropdown-desktop" } %>
 </div>
 
