--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -62,6 +62,31 @@ header{
 
     &__breadcrumb-mobile{
       @apply block lg:hidden w-full z-10;
+
+      &__dropdown-trigger{
+        @apply flex items-center justify-between text-white;
+
+        span{
+          @apply flex flex-wrap md:flex-nowrap gap-x-2.5 overflow-hidden text-white;
+        }
+
+        svg{
+          @apply w-6 h-6 fill-current;
+        }
+      }
+
+      /* overwrite default dropdown styles */
+      [id*="dropdown-menu"]{
+        @apply mx-0 py-0 border-0;
+      }
+
+      [data-target*="dropdown"]{
+        @apply w-auto last-of-type:[&>svg]:block;
+
+        > svg{
+          @apply text-white;
+        }
+      }
     }
 
     &__actions{
@@ -118,7 +143,7 @@ header{
       }
 
       &__menu{
-        @apply w-full md:w-1/4 bg-primary px-8 py-3 divide-y divide-gray-3 text-white;
+        @apply w-full md:w-1/4 bg-primary px-4 md:px-8 pt-0 pb-3 md:py-3 divide-y divide-gray-3 text-white;
 
         > *{
           @apply py-3 md:py-3.5;
