--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -92,11 +92,6 @@ header{
       }
     }
 
-    /* overwrite default dropdown styles */
-    [id*="dropdown-menu"][aria-hidden="true"]{
-      @apply md:hidden;
-    }
-
     &__dropdown{
       @apply divide-y divide-gray-3 z-20 w-64;
 
@@ -127,6 +122,19 @@ header{
           }
         }
       }
+    }
+
+    /* overwrite default dropdown styles */
+    [id*="dropdown-menu"]{
+      @apply py-0 mx-0 w-full md:w-auto;
+
+      &[aria-hidden="true"]{
+        @apply md:hidden;
+      }
+    }
+
+    [data-target*="dropdown"]{
+      @apply last-of-type:[&>svg]:block;
     }
   }
 }
