--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_desktop.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_desktop.html.erb
@@ -24,7 +24,7 @@
   </div>
 <% else %>
   <div class="main-bar__dropdown-container">
-    <div id="trigger-dropdown-account" class="main-bar__dropdown-trigger" data-component="dropdown" data-target="panel-dropdown-menu-account">
+    <div id="trigger-dropdown-account" class="main-bar__dropdown-trigger" data-component="dropdown" data-target="dropdown-menu-account">
       <% if current_user.notifications.any? || current_user.unread_conversations.any? %>
         <span class="main-bar__dropdown-trigger__notification" data-unread-items></span>
       <% end %>
@@ -44,7 +44,7 @@
         </span>
       <% end %>
     </div>
-    <div id="panel-dropdown-menu-account" aria-hidden="true">
+    <div id="dropdown-menu-account" aria-hidden="true">
       <ul class="dropdown dropdown__bottom main-bar__dropdown">
         <%= render partial: "layouts/decidim/header/redesigned_main_links_dropdown" %>
       </ul>
