remove dummy code

--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_mobile_tablet.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu_breadcrumb_mobile_tablet.html.erb
@@ -16,219 +16,6 @@
 
 <% if dropdown_item.present? %>
   <div id="secondary-dropdown-menu-mobile" aria-hidden="true">
-    <%#= cell dropdown_item[:dropdown_cell], dropdown_item[:resource] %>
-    <div id="breadcrumb-secondary-dropdown-2" class="menu-bar__secondary-dropdown">
-      <div class="menu-bar__secondary-dropdown__left">
-        <h4 class="menu-bar__secondary-dropdown__title">Super process</h4>
-    <a class="mt-4 button button__text-secondary" href="/processes/smile-cutting/description">
-      <span>Más información</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-    </a>
-    <div class="menu-bar__secondary-dropdown__metadata">
-      <span>
-        <svg width="1em" height="1em" role="img" aria-hidden="true" class="text-gray fill-current"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-direction-line" tabindex="-1"></use></svg>
-
-        <span class="font-semibold">Fase actual:</span>
-        <a class="text-secondary underline" href="/processes/smile-cutting/steps">Laboriosam.</a>
-      </span>
-
-
-        <span>
-          <svg width="1em" height="1em" role="img" aria-hidden="true" class="text-gray fill-current"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-twitter-line" tabindex="-1"></use></svg>
-          <a target="_blank" class="text-secondary underline" href="/link?external_url=https%3A%2F%2Ftwitter.com%2Fhashtag%2Faut%3Fsrc%3Dhash" data-remote="true">#aut<span data-external-link="true" class="inline-block mx-0.5"><svg width="0.75em" height="0.75em" role="img" aria-hidden="true" class="fill-current"><title>external-link-line</title><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-external-link-line"></use></svg><span class="sr-only">(External link)</span></span></a>
-        </span>
-
-    </div>
-
-
-        <div class="bg-background rounded p-4 space-y-3 text-sm">
-
-      <div id="Z2lkOi8vZGVjaWRpbS1kZXZlbG9wbWVudC1hcHAvRGVjaWRpbTo6UGFydGljaXBhdG9yeVByb2Nlc3MvMg-3072" class="activity" data-activity="">
-      <div class="activity__time">
-        Hace hace 2 días
-      </div>
-      <div class="activity__content">
-        <span>
-          Nuevo encuentro:
-          <a href="/processes/smile-cutting/f/12/meetings/93">
-            SR test
-          </a>
-        </span>
-
-      </div>
-
-        <div class="activity__author">
-
-        </div>
-
-    </div>
-
-
-      <div id="Z2lkOi8vZGVjaWRpbS1kZXZlbG9wbWVudC1hcHAvRGVjaWRpbTo6UGFydGljaXBhdG9yeVByb2Nlc3MvMg-3068" class="activity" data-activity="">
-      <div class="activity__time">
-        Hace hace 23 días
-      </div>
-      <div class="activity__content">
-        <span>
-          Nueva propuesta:
-          <a href="/processes/book-bless/f/3/proposals/78">
-            Como grupo creo esta propuesta
-          </a>
-        </span>
-
-      </div>
-
-        <div class="activity__author">
-
-      <a href="/profiles/germaine_yost">
-        <img alt="Avatar: Christiansen-Cronin" class="w-full h-full object-cover" src="/decidim-packs/media/images/default-avatar-aaa9e55bac5d7159b847.svg">
-
-      </a>
-
-
-        </div>
-
-    </div>
-
-
-      <div id="Z2lkOi8vZGVjaWRpbS1kZXZlbG9wbWVudC1hcHAvRGVjaWRpbTo6UGFydGljaXBhdG9yeVByb2Nlc3MvMg-3066" class="activity" data-activity="">
-      <div class="activity__time">
-        Hace hace 25 días
-      </div>
-      <div class="activity__content">
-        <span>
-          <span>Nuevo comentario en <a href="/processes/book-bless/f/9/posts/4?commentId=1325">Sequi delectus numquam modi labore.</a></span>
-          <a href="/processes/book-bless/f/9/posts/4?commentId=1325">
-            I like this topic
-          </a>
-        </span>
-
-      </div>
-
-        <div class="activity__author">
-
-      <a href="/profiles/blat">
-        <img alt="Avatar: Fernando Blat" class="w-full h-full object-cover" src="/decidim-packs/media/images/default-avatar-aaa9e55bac5d7159b847.svg">
-
-      </a>
-
-
-        </div>
-
-    </div>
-
-
-      <div id="Z2lkOi8vZGVjaWRpbS1kZXZlbG9wbWVudC1hcHAvRGVjaWRpbTo6UGFydGljaXBhdG9yeVByb2Nlc3MvMg-3063" class="activity" data-activity="">
-      <div class="activity__time">
-        Hace hace 25 días
-      </div>
-      <div class="activity__content">
-        <span>
-          <span>Nuevo comentario en <a href="/processes/book-bless/f/9/posts/4?commentId=1324">Sequi delectus numquam modi labore.</a></span>
-          <a href="/processes/book-bless/f/9/posts/4?commentId=1324">
-            Subreply
-          </a>
-        </span>
-
-      </div>
-
-        <div class="activity__author">
-
-      <a href="/profiles/blat">
-        <img alt="Avatar: Fernando Blat" class="w-full h-full object-cover" src="/decidim-packs/media/images/default-avatar-aaa9e55bac5d7159b847.svg">
-
-      </a>
-
-
-        </div>
-
-    </div>
-
-
-
-    </div>
-    <a class="mt-2.5 button button__text-secondary" href="/last_activities?locale=es">
-      <span>Última actividad</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-    </a>
-
-      </div>
-      <ul class="menu-bar__secondary-dropdown__menu">
-
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting">
-            <span>El proceso</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/16/">
-            <span>Seguimiento</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/19/">
-            <span>Blog</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/14/">
-            <span>Presupuestos</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/17/">
-            <span>Debates</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/20/">
-            <span>Votaciones</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/12/">
-            <span>Encuentros</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/11/">
-            <span>Página</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/13/">
-            <span>Propuestas</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/18/">
-            <span>Sorteos</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/15/">
-            <span>Encuesta</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-        <li>
-          <a class="button button__text text-white" href="/processes/smile-cutting/f/124/">
-            <span>Encuesta</span><svg width="1em" height="1em" role="img" aria-hidden="true"><use href="/decidim-packs/media/images/remixicon.symbol-5540ed538fb6bd400d2a.svg#ri-arrow-right-line" tabindex="-1"></use></svg>
-          </a>
-        </li>
-
-
-
-      </ul>
-    </div>
+    <%= cell dropdown_item[:dropdown_cell], dropdown_item[:resource] %>
   </div>
 <% end %>
