--- a/decidim-accountability/app/views/decidim/participatory_spaces/_result.html.erb
+++ b/decidim-accountability/app/views/decidim/participatory_spaces/_result.html.erb
@@ -9,12 +9,12 @@
       <div class="text-small card--meta">
         <% if result.start_date %>
             <strong><%= t("models.result.fields.start_date", scope: "decidim.accountability") %></strong>
-            <span><%= l result.start_date, format: :decidim_short %></span>
+            <span><%= l result.start_date, format: :short %></span>
         <% end %>
 
         <% if result.end_date %>
             <strong><%= t("models.result.fields.end_date", scope: "decidim.accountability") %></strong>
-            <span><%= l result.end_date, format: :decidim_short %></span>
+            <span><%= l result.end_date, format: :short %></span>
         <% end %>
 
         <% if result.status %>
