--- a/decidim-admin/app/views/decidim/admin/shared/landing_page/_content_blocks.html.erb
+++ b/decidim-admin/app/views/decidim/admin/shared/landing_page/_content_blocks.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card edit_content_blocks">
   <div class="card-divider">
     <h2 class="card-title">
       <%= content_blocks_title %>
