Pass participatory space as argument to process_nav_item helper method

--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -47,7 +47,7 @@
         <%= icon "arrow-up-s-line" %>
       </button>
       <ul id="dropdown-menu" class="process__nav">
-        <%= render partial: "layouts/decidim/process_nav_item", collection: process_nav_items, as: :item %>
+        <%= render partial: "layouts/decidim/process_nav_item", collection: process_nav_items(current_participatory_space), as: :item %>
       </ul>
     </div>
 
