--- a/decidim-admin/app/views/decidim/admin/user_groups/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/user_groups/index.html.erb
@@ -13,6 +13,7 @@
         <thead>
           <tr>
             <th><%= sort_link(query, :name, t("models.user_group.fields.name", scope: "decidim.admin"), default_order: :desc) %></th>
+            <th><%= sort_link(query, :nickname, t("models.user_group.fields.nickname", scope: "decidim.admin"), default_order: :desc) %></th>
             <th><%= sort_link(query, :document_number, t("models.user_group.fields.document_number", scope: "decidim.admin"), default_order: :desc) %></th>
             <th><%= sort_link(query, :phone, t("models.user_group.fields.phone", scope: "decidim.admin"), default_order: :desc) %></th>
             <th><%= sort_link(query, :users_count, t("models.user_group.fields.users_count", scope: "decidim.admin"), default_order: :desc) %></th>
@@ -24,7 +25,13 @@
         <tbody>
           <% @user_groups.each do |user_group| %>
             <tr data-user-group-id="<%= user_group.id %>">
-              <td><%= user_group.name %></td>
+              <% if user_group.nickname.present? %>
+                <td><%= link_to user_group.name, decidim.profile_path(user_group.nickname) %></td>
+                <td><%= link_to user_group.nickname, decidim.profile_path(user_group.nickname) %></td>
+              <% else %>
+                <td><%= user_group.name %></td>
+                <td><%= user_group.nickname %></td>
+              <% end %>
               <td><%= user_group.document_number %></td>
               <td><%= user_group.phone %></td>
               <td><%= user_group.users.size %></td>
