--- a/decidim-admin/app/views/decidim/admin/officializations/index.html.erb
+++ b/decidim-admin/app/views/decidim/admin/officializations/index.html.erb
@@ -20,8 +20,8 @@
         <tbody>
           <% @users.each do |user| %>
             <tr data-user-id="<%= user.id %>">
-              <td><%= link_to user.nickname.present?, user.name, decidim.profile_path(user.nickname) %></td>
-              <td><%= link_to user.nickname.present?, user.nickname, decidim.profile_path(user.nickname) %></td>
+              <td><%= link_to_if user.nickname.present?, user.name, decidim.profile_path(user.nickname) %></td>
+              <td><%= link_to_if user.nickname.present?, user.nickname, decidim.profile_path(user.nickname) %></td>
               <td><%= l user.created_at, format: :short %></td>
               <td><%= user.officialized? ? t(".officialized") : t(".not_officialized") %></td>
               <td><%= translated_attribute(user.officialized_as) %></td>
