--- a/decidim-core/app/cells/decidim/content_blocks/participatory_space_main_data/recent_users.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/participatory_space_main_data/recent_users.erb
@@ -1,11 +1,7 @@
 <%# REDESIGN_PENDING: This endpoint should be implemented for each participatory space %>
 <%= link_to "last_activities_path", class: prefixed_class("metadata-link") do %>
   <div class="<%= prefixed_class("metadata-link-endorsers") %>">
-    <% last_activities_users.each do |user| %>
-      <span class="endorsers-list__avatar">
-        <%= cell "decidim/redesigned_author", Decidim::UserPresenter.new(user), layout: :avatar, skip_profile_link: true %>
-      </span>
-    <% end %>
+    <%= cell("decidim/content_blocks/participatory_space_last_activity", model, base_model:).render_recent_avatars %>
   </div>
   <span><%= t("see_all_activity", scope: "layouts.decidim.participatory_processes.participatory_process") %></span>
 <% end %>
