Add redesign pending comments

--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
@@ -110,6 +110,7 @@ edit_link(
     <%= cell("decidim/photos_list", current_participatory_space.photos) %>
   </section>
 
+  <%# REDESIGN_PENDING: Part of the items of this block should be integrated in different content blocks and other discarded %>
   <% if false %>
   <div class="row column">
     <div class="row">
