--- a/decidim-core/app/cells/decidim/card_g/show.erb
+++ b/decidim-core/app/cells/decidim/card_g/show.erb
@@ -7,7 +7,7 @@
 
   <div class="<%= classes[:text] %>">
     <%= content_tag title_tag, title, class: title_class %>
-    <%= description if has_description? %>
+    <%= description if show_description? %>
 
     <% if metadata_cell.present? && !metadata_cell.blank? %>
       <div class="<%= classes[:metadata] %>">
