--- a/decidim-core/app/cells/decidim/content_blocks/base/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/base/show.erb
@@ -1,3 +1,3 @@
-<%= content_tag :section, class: section_class do %>
+<%= content_tag :section, class: section_class, data: do %>
   <%= render :content %>
 <% end %>
