--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -111,7 +111,7 @@ header{
         }
 
         &__avatar{
-          @apply w-8 h-8 rounded-full border border-secondary overflow-hidden;
+          @apply block w-8 h-8 rounded-full border border-secondary overflow-hidden;
 
           span{
             @apply w-full h-full rounded-full overflow-hidden;
