--- a/decidim-conferences/app/views/decidim/conferences/conferences/index.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/conferences/index.html.erb
@@ -20,7 +20,9 @@ edit_link(
   <% if promoted_conferences.any? %>
     <section id="highlighted-conferences" class="card__highlight-container">
       <h2 class="h3 decorator"><%= t("conferences.index.promoted_conferences", scope: "layouts.decidim") %></h2>
-      <%= render partial: "promoted_conference", collection: promoted_conferences, as: :promoted_conference %>
+      <% promoted_conferences.each do |promoted_conference| %>
+        <%= card_for promoted_conference, highlight: true %>
+      <% end %>
     </section>
   <% end %>
 
