--- a/decidim-core/app/cells/decidim/card_g/show.erb
+++ b/decidim-core/app/cells/decidim/card_g/show.erb
@@ -9,7 +9,7 @@
     <%= content_tag title_tag, title, class: title_class %>
     <%= description if show_description? %>
 
-    <% if metadata_cell.present? && !metadata_cell.blank? %>
+    <% if metadata_cell.present? %>
       <div class="<%= classes[:metadata] %>">
         <%= cell metadata_cell, resource %>
       </div>
